<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/commons_title" />

        <RelativeLayout
            android:id="@+id/rl_ask_for_card"
            android:layout_width="match_parent"
            android:layout_height="50dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/ask_for_card"
                android:textColor="@color/comment_six_color"
                android:textSize="14sp" />


            <ImageView
                android:layout_width="8dp"
                android:layout_height="13dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/null_value"
                android:src="@mipmap/arrow_right" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/comment_line" />

        <RelativeLayout
            android:id="@+id/rl_ask_card_for_friend"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/ask_card_for_friend"
                android:textColor="@color/comment_six_color"
                android:textSize="14sp" />


            <ImageView
                android:layout_width="8dp"
                android:layout_height="13dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/null_value"
                android:src="@mipmap/arrow_right" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/comment_line" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/comment_bg" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/comment_line" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/provincial_traffic_patterns"
                android:textColor="@color/comment_six_color"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/switch_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="20dp"
                android:background="@mipmap/switch_icon_on"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/switch_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="20dp"
                android:background="@mipmap/switch_icon"
                android:visibility="gone" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/comment_line" />

        <RelativeLayout
            android:id="@+id/rl_message_to_remind"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/message_to_remind"
                android:textColor="@color/comment_six_color"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="8dp"
                android:layout_height="13dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/null_value"
                android:src="@mipmap/arrow_right" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/comment_line" />


        <RelativeLayout
            android:id="@+id/rl_clear_the_cache"
            android:layout_width="match_parent"
            android:layout_height="45dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/clear_the_cache"
                android:textColor="@color/comment_six_color" />


            <ImageView
                android:id="@+id/iv_arrow"
                android:layout_width="8dp"
                android:layout_height="13dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:src="@mipmap/arrow_right" />

            <TextView
                android:id="@+id/tv_cache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:layout_toLeftOf="@id/iv_arrow"
                android:text="50M"
                android:textColor="@color/comment_six_color"
                android:textSize="16sp" />

        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/comment_line" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/comment_bg" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/comment_line" />


        <RelativeLayout
            android:id="@+id/rl_feedback"
            android:layout_width="match_parent"
            android:layout_height="45dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/feedback"
                android:textColor="@color/comment_six_color"
                android:textSize="14sp" />


            <ImageView
                android:layout_width="8dp"
                android:layout_height="13dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/null_value"
                android:src="@mipmap/arrow_right" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/comment_line" />

        <RelativeLayout
            android:id="@+id/rl_the_questionnaire_survey"
            android:layout_width="match_parent"
            android:layout_height="45dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/the_questionnaire_survey"
                android:textColor="@color/comment_six_color"
                android:textSize="14sp" />


            <ImageView
                android:layout_width="8dp"
                android:layout_height="13dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/null_value"
                android:src="@mipmap/arrow_right" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/comment_line" />

        <RelativeLayout
            android:id="@+id/rl_application_for"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/application_for"
                android:textColor="@color/comment_six_color"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="8dp"
                android:layout_height="13dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/null_value"
                android:src="@mipmap/arrow_right" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/comment_line" />

        <RelativeLayout
            android:id="@+id/rl_card_guide"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/card_guide"
                android:textColor="@color/comment_six_color"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="8dp"
                android:layout_height="13dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/null_value"
                android:src="@mipmap/arrow_right" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/comment_line" />

        <RelativeLayout
            android:id="@+id/rl_super_optional_activity"
            android:layout_width="match_parent"
            android:layout_height="45dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/super_optional_activity"
                android:textColor="@color/comment_six_color"
                android:textSize="14sp" />


            <ImageView
                android:layout_width="8dp"
                android:layout_height="13dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/null_value"
                android:src="@mipmap/arrow_right" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/comment_line" />

        <RelativeLayout
            android:id="@+id/rl_about_union"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/about_union"
                android:textColor="@color/comment_six_color"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="8dp"
                android:layout_height="13dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/null_value"
                android:src="@mipmap/arrow_right" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/comment_line" />

        <RelativeLayout
            android:id="@+id/rl_about_hui_life"
            android:layout_width="match_parent"
            android:layout_height="45dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/about_hui_life"
                android:textColor="@color/comment_six_color" />


            <ImageView
                android:id="@+id/arrow"
                android:layout_width="8dp"
                android:layout_height="13dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:src="@mipmap/arrow_right" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_toLeftOf="@id/arrow"
                android:layout_toStartOf="@id/arrow"
                android:text="@string/version"
                android:textColor="@color/comment_six_color"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
